--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@milkdown/crepe": "^7.17.1",
     "@milkdown/kit": "^7.17.1",
     "@milkdown/plugin-automd": "^7.17.1",
+    "@milkdown/plugin-math": "^7.5.9",
     "@milkdown/preset-commonmark": "^7.17.1",
     "@milkdown/preset-gfm": "^7.17.1",
     "@milkdown/prose": "^7.17.1",
