--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "flymd",
-  "version": "0.1.6-fix",
+  "version": "0.1.7",
   "private": true,
   "license": "LicenseRef-flyMD-NC-1.0",
   "type": "module",
